# src/commands/resources/index.ts
@@ -1,7 +1,10 @@
 import type { DeprecatedResource, ResourceDefinition } from "../../resources/definition.js";
 import { transfers } from "./transfers.js";
+import { paymentMethods } from "./payment-methods.js";
+import { accounts } from "./accounts.js";
+import { capabilities } from "./capabilities.js";
 
-export const resources: ResourceDefinition[] = [transfers];
+export const resources: ResourceDefinition[] = [transfers, paymentMethods, accounts, capabilities];
 
 export const deprecatedResources: DeprecatedResource[] = [
   {
